--- a/gb/21/9/7/n13217719.md
+++ b/gb/21/9/7/n13217719.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxeqnh3506/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/pxeqnh3506/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/pxeqnh3506/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/pxeqnh3506/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/pxeqnh3506/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新西兰一男子恐怖袭击砍伤多人 遭警方击毙</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13217755-GettyImages-1337999166@1200x1200-600x400.jpg" />
 <h6>纽西兰奥克兰9月3日下午发生了一起恐怖袭击，一名斯里兰卡籍恐怖份子在一家超市造成7人受伤后被警方击毙。该恐怖份子被披露利用伪造文件获得了纽西兰难民身份。图为9月3日当天在事发现场的警察。（Fiona Goodall/Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2021年09月08日讯】（大纪元记者徐亦扬综合报导）新西兰最大的城市奥克兰9月3日下午发生了一起“独狼式”<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E6%81%90%E6%80%96%E8%A2%AD%E5%87%BB.md#1">恐怖袭击</a>，一名斯里兰卡籍男子在奥克兰西区的一家超市砍伤7人后被警方击毙。据悉，该男子已被警方监控多年，但仍发生了这起悲剧。</p>
+	<p>【大纪元2021年09月08日讯】（大纪元记者徐亦扬综合报导）新西兰最大的城市奥克兰9月3日下午发生了一起“独狼式”<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%81%90%E6%80%96%E8%A2%AD%E5%87%BB.md#1">恐怖袭击</a>，一名斯里兰卡籍男子在奥克兰西区的一家超市砍伤7人后被警方击毙。据悉，该男子已被警方监控多年，但仍发生了这起悲剧。</p>
 <p>新西兰当地时间9月3日下午2点30分左右，一名男子进入奥克兰西区Lynn Mall购物中心内的Countdown超市。</p>
 <p>新西兰警方于9月3日20时15分在脸书上的发布声明：“在超市内，我们认为这名男子从超市的货架上拿了一把刀袭击了购物者。”</p>
 <p>秘密警察战术小组（Covert Police Specialist Tactics Group, STG）成员一直在尽可能的密切监视和跟踪这名男子，但未被其发现，他们在60秒内就对袭击作出了应对。一名警察质问该男子，转移了他的注意力。</p>
 <p>“他拿着刀冲向他们，警察开枪打死了他。”声明中说，该袭击者不久后便当场死亡。警方没有寻找与该事件有关的其他人，“相信这名男子是单独行动”。</p>
 <p>警方当时通报的受伤人数为6人，其中3人伤势严重，被送往奥克兰医院救治。</p>
-<p>9月3日17时20分，新西兰总理杰辛达·阿德恩（Jacinda Ardern)在新闻发布会上证实这是一起“<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E6%81%90%E6%80%96%E8%A2%AD%E5%87%BB.md#1">恐怖袭击</a>”，行凶者受到了伊斯兰国的影响。</p>
+<p>9月3日17时20分，新西兰总理杰辛达·阿德恩（Jacinda Ardern)在新闻发布会上证实这是一起“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%81%90%E6%80%96%E8%A2%AD%E5%87%BB.md#1">恐怖袭击</a>”，行凶者受到了伊斯兰国的影响。</p>
 <p>9月4日，受伤人数被更新至7人，其中5人在医院治疗，其中3人情况危急。受害者的年龄在29岁至77岁之间，他们分别在三家医院接受治疗。</p>
 <p>新西兰高等法院2018年曾下令，禁止公布有关恐怖分子的信息。 9月4日上午，新西兰高等法院向媒体证实，对恐怖分子姓名的禁止令已解除；当晚23时，公布该恐怖分子的姓名：艾哈迈德·阿特希尔·穆罕默德·萨姆苏丁（Ahamed Aathill Mohamed Samsudeen）。</p>
 <figure id="attachment_13217757" aria-describedby="caption-attachment-13217757" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/09/id13217757-GettyImages-1338122031@1200x1200.jpg"><img class="size-large wp-image-13217757" src="https://i.epochtimes.com/assets/uploads/2021/09/id13217757-GettyImages-1338122031@1200x1200-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13217757" class="wp-caption-text">奥克兰9月3日下午发生了一起恐怖袭击，一名斯里兰卡籍恐怖份子在一家超市造成7人受伤后被警方击毙。图为事发第二天，在事发地点Countdown超市附近巡逻的武装警察。（Fiona Goodall/Getty Images）</figcaption></figure>
@@ -38,7 +38,7 @@
 <h2>酝酿多年的恐袭</h2>
 <p>自十年前抵达新西兰，萨姆苏丁已经在新西兰执法部门的监视下超过五年。</p>
 <p>2016年4月，萨姆苏丁对当时发生的恐怖袭击表示同情并分享暴力战争视频，从而引起了警方和新西兰安全情报局（New Zealand Security Intelligence Service，NZSIS）的注意。之后，他首次被警方谈话；同年5月，他再次被警方警告。</p>
-<p>在法庭文件中，萨姆苏丁在网络上发布的帖子被描述为“<ahref="https://github.com/pxeqnh3506/djy/blob/master/gb/tag/%E5%9D%9A%E5%AE%9A%E5%8F%8D%E8%A5%BF%E6%96%B9.md#1">坚定反西方</a>”，其中包括暴力画面和鼓吹极端主义的评论。</p>
+<p>在法庭文件中，萨姆苏丁在网络上发布的帖子被描述为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%9D%9A%E5%AE%9A%E5%8F%8D%E8%A5%BF%E6%96%B9.md#1">坚定反西方</a>”，其中包括暴力画面和鼓吹极端主义的评论。</p>
 <p>尽管有警告，萨姆苏丁依然继续在网上发布类似内容。 2017年，萨姆苏丁在奥克兰一座清真寺告诉一名男子，他想去叙利亚“为伊斯兰国战斗”；同年5月，他在奥克兰国际机场被警方逮捕，当时，他正准备前往叙利亚。</p>
 <p>警方搜查他的公寓时在他的床垫下发现了一把大猎刀和更多的“原教旨主义材料”，此外还有其手持枪支摆姿势的照片，以及他电脑上保存的枪支、十字弓和其它军事装备在网上的购买链接。</p>
 <p>萨姆苏丁后来被判持有两份有异议的出版物和拒绝服从警方搜查的罪名成立，但持有猎刀和一段有异议的视频罪名不成立。</p>
@@ -72,41 +72,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/17/8/18/n9542207.md#1">西班牙挫败第二次恐袭图谋 警方击毙5嫌犯</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/19/2/22/n11065045.md#1">英国籍IS新娘想带儿回国  国籍被取消</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/19/12/29/n11753758.md#1">美情报助俄破获恐怖袭击 普京致电感谢川普</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/3/23/n12830661.md#1">组图：比利时国王出席恐怖袭击五周年悼念仪式</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/18/n9542207.md#1">西班牙挫败第二次恐袭图谋 警方击毙5嫌犯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/22/n11065045.md#1">英国籍IS新娘想带儿回国  国籍被取消</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/12/29/n11753758.md#1">美情报助俄破获恐怖袭击 普京致电感谢川普</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/3/23/n12830661.md#1">组图：比利时国王出席恐怖袭击五周年悼念仪式</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/30/n10752312.md#1" target="_blank">谭松：一个被摧折了“阳根”的老地主</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/12/n10478618.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/2/n13205792.md#1">【未解之谜】 不懂中文 会唱中文歌 邓丽君归来？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/7/23/n13108846.md#1">【命理】清朝时风水征验人宅吉凶的一些事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208894.md#1">【未解之谜】预言新解 激光雷达揭秘玛雅世界</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/3/n13208933.md#1">北洋女学教授转生三世容貌相同 写书讲果报</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/26/n13188418.md#1">古籍记载：瘟疫出现之前 疫鬼做标记</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220351.md#1">【秦鹏直播】武汉病毒所被曝曾改造蝙蝠病毒</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13220324.md#1">【时事纵横】毛忌日官方沉默 美日新动作抗共</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/8/31/n13200641.md#1">【思想领袖】麦克基：社会主义的蛊惑欺骗</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216420.md#1">赵薇再遭官媒点名 20年资本布局曝光</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217017.md#1">【拍案惊奇】赵薇卷入习江斗？传李嘉诚公子或出事</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217379.md#1">美军绝密无人机疑现身南海 为何无可匹敌</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217860.md#1">回顾赵薇当年有多红 网友挖出孙俪曾给她伴舞</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218036.md#1">被指来自天王嫂训练营 郭富城妻哽咽首谈内情</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13215985.md#1">因台独言论遭FB禁言 台网红怒：文革蔓延到台湾</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/6/n13215231.md#1">怕成下个赵薇？谢霆锋认退加拿大国籍引热议</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/6/n13214171.md#1">《尚气》横扫周末台美票房 梁朝伟做了2个突破</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216262.md#1">空姐考考你：飞机上禁烟 为何设有烟灰缸？</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/8/n13218742.md#1">获救孤儿小象回野外 多年后带小孩去看恩人</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217337.md#1">台爆幼儿园群聚感染 3类儿童新冠重症风险高</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13216037.md#1">澳洲琴鸟模仿婴儿哭声 如原音重现</a></li>
-<li><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/4/n13210459.md#1">古人怎么洁牙护齿？牙刷是怎么来的？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/pxeqnh3506/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/7/n13217719.htm">新西兰一男子恐怖袭击砍伤多人 遭警方击毙</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/7/n13217719.htm">新西兰一男子恐怖袭击砍伤多人 遭警方击毙</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/pxeqnh3506/djy/blob/master/gb/21/9/7/n13217719.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/pxeqnh3506/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/pxeqnh3506/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/pxeqnh3506/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/pxeqnh3506/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/9/7/n13217719.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
